# pulseaudio-simple-device

./: Cargo.toml
examples/: oscillator.rs  sine.rs
src/: config.rs  device.rs  lib.rs  stream.rs
